--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
 
   </div>
 
+
+  <div class="skill">
+    
+    <h1>My Skills</h1>
+
+    <p class="mySkills">Design Thinking Process, Persona Creation, Heuristic Evaluation, Information Architecture, Flow Mapping, Wireframing, Card Sorting, Interactive Prototyping, Usertesting, UI Composition, Responsive Design, HTML, CSS, JavaScript, Bootstrap, Adobe XD, Figma, Invision, Adobe Illustrator, Adobe Photoshop, Adobe Indesign, Github, Hard Worker, Organized, Personable, Leader, Problem Solver, Communication, Collaborative 
+    </p>
+
+  </div>
+
     
 </body>
 
